 * @decompile now uses '&attr obj=value', even for standard attributes, to
   avoid possible clashes with command names. Suggested by Mercutio. [MG]
 * Extended convtime understands timestamps of the form 'YYYY-MM-DD hh:mm:ss'.
   Suggested by Padraic. [SW]
 * pemit() now accepts a list of port numbers, to pemit to multiple ports
   at once. Suggested by Padraic. [MG]

Fixes:
 * Verified that Penn compiles using the clang compiler, and fix a few
   warnings it generated. [SW]
 * Better fix for the DBREFLIST issue fixed in p6. [SW]
 * @pemit/list stopped reporting when it failed to match an object in p5.
   Reported by Padraic. [MG]
 * 'page' evaluated its args incorrectly when used in an $-command.
   Reported by Invidia@Dune3. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * Fix an off-by-one error in wrap(). Report by Padraic, patch by Minion [MG]
 * Sorting code didn't do proper objid checks, so setinter(#1:123, #1:456)
   would return #1:123 instead of nothing. [MG]

Version 1.8.4 patchlevel 6                                 Jul 29,  2011

Minor changes:
 * Clean up the linux inotify file monitoring code a bit. [SW]
 * @forwardlist can be inherited (But defaults to no-inherit). Suggested
   by Padraic.
 * @pemit/port now takes the /list switch, to pemit multiple ports at once.
   Suggested by Padraic. [MG]
 * When you 'register' a character at the connect screen, you can re-use the
   command to send a new password to the same email address, as long as you
   haven't connected yet. Suggested by Minion. [MG]
 * @odescribe/@adescribe are no longer triggered when a Terse player moves
   into a room, as he doesn't see the @describe. Suggested by Padraic. [MG]
 * exit-oneway and exit-multiple warning checks now take global exits
   into account. Suggested by Padraic and qa'toq. [SW]

Functions:
 * valid() can be used with the 'qreg' category to check if a string
   is a valid q-register name.  [SW]